# Testes_NDD

./: Readme.md
Testes_Cypress/: 1_Testes_de_login.cy.js  2_Testes_de_reordenacao_de_produtos.cy.js  3_Testes _de_adicao_de_produtos_no_carrinho.cy.js  4_Testes_de_conclusao_de_pedido.cy.js  funcoesGlobais.js
Testes_Robot/: .gitignore  pyproject.toml
Testes_Robot/resources/: 1_Testes_de_login.resource  2_Testes_de_reordenacao_de_produtos.resource  3_Testes_de_adicao_de_produtos_no_carrinho.resource  4_Testes_de_conclusao_do_pedido.resource
Testes_Robot/tests/: 1_Testes_de_login.robot  2_Testes_de_reordenacao_de_produtos.robot  3_Testes_de_adicao_de_produtos_no_carrinho.robot  4_Testes_de_conclusao_do_pedido.robot
